...
  BoolColumn get showGlobalProgress =>
      boolean().withDefault(const Constant(true))();
  BoolColumn get showUnits => boolean()();
  TextColumn get strengthUnit => text()();
  BoolColumn get systemColors => boolean()();
  TextColumn get tabs => text().withDefault(
    const Constant("HistoryPage,PlansPage,GraphsPage,TimerPage"),
  )();
  TextColumn get themeMode => text()();
  IntColumn get timerDuration => integer()();
  BoolColumn get vibrate => boolean()();
  IntColumn get warmupSets => integer().nullable()();
  BoolColumn get scrollableTabs =>
...
